--- a/trunk/chapter01.tex
+++ b/trunk/chapter01.tex
@@ -319,18 +319,24 @@ The scene understanding usually implicates in distinguish differents types of ob
 
 \textbf{Risk Assessment} is a term adopted in several fields, to indicate the mitigation of the risks involved in the target activity. 
 
-Before describe Risk Assessment and its relation with ADAS, we have first to understand what risk means.
+Before describe Risk Assessment and its relation with ADAS, we first, must to understand what risk means.
 
 \textbf{Risk} is anything that can affect (negatively or positively) a subject. By positive meaning that if such thing happens to be true: something good may happen to the subject, or negative meaning if another given thing happens to be true, the subject may suffer negative consequences. It is a common practice to track just the negative risks, that is why positive risk looks so unfamiliar for most of the readers. 
 
-For that reason some literature use terms like hazard or threat to refer to negative risks. But in this document when we refer to risk, we mean the negative risk - something happens to be true something bad may happen to the subject.
+For that reason some literature use terms like hazard or threat to refer to negative risks. But in this document when we refer to risk, we mean the negative risk.
 
-As we saw in certain level of details the meaning of risk, now we can understand the whole meaning of the term, but not without first understanding what "assessment" means.
+As we saw in certain level of details the meaning of risk, we can understand the whole meaning of the term "Risk assessment" , but first it is better understanding what "assessment" means.
 
-The \textbf{assessment} is the action of study what variations can affect the subject, this variation can be \textbf{direct} or \textbf{indirect} as well, but we will not explain in details, it is sufficient to know that something it is related with the "thing" that affects the subject, did it happened directly with the subject? or indirectly?
+The \textbf{assessment} is the action of study what variations can affect the subject, this variation can be \textbf{direct} or \textbf{indirect} as well, but we will not explain in details, it is sufficient to know that it is related with how the "thing" affected the subject, did it happened directly on the subject? or indirectly?
 
-One good example to illustrate the \textbf{direct} and \textbf{indirect} situations, imagine you bought a very good amount of shares from Apple Inc\copyright. But you forgot that its products are manufactured in an asian country and suddenly this asian country government annouces that it is forbiden to export of any kind of product to western countries. 
+One good example to illustrate the \textbf{direct} and \textbf{indirect} situations, imagine you bought a very good amount of shares from Apple Inc\copyright. But you forgot that its products are manufactured in an asian country. Suddenly this asian country government annouces that it is forbiden to export any kind of product to western countries. 
 
 Well, needless to say that you are bankrupt. Something that was not directly related - international diplomacy relations - to your subject can affect dramatically its value. We can refer to the subject as assets, or future assets.
 
-Thus, the subject can be anything with enough degree of importance to justify the risk assessment. Some examples are: a project, stocks, a schedule, an action.
+Thus, the subject can be anything with enough degree of importance to justify the risk assessment. Some examples are: a project, stock market share, a schedule, an action.
+
+Risk assessment applied in ADAS is done to evaluate the risk of collision between vehicles. Thus, we are worried about direct risk. 
+
+This is done by perceiving the environment, specifically the dynamic environment. The dynamic environment is chosen to be studied rather than static due to its close relation with  collisions situations. 
+
+The collitions can be caused by several factors, but independent objects moving and sharing the same space are responsible for a big part of the collitions, thus the relationship among dynamic objects are important for the risk assessment.
