risk assessment corrections

--- a/chapter01.tex
+++ b/chapter01.tex
@@ -302,7 +302,7 @@ In this case, the static environment is everything that the robot can perceive. 
 
 In the \textbf{Scenario 2}, it is much more complicated to obtain any information from the environment.
 
-This lead us to one conclusion: it is hard to do risk analisis when you do not know the objects of the scene.
+This lead us to one conclusion: it is hard to do risk analysis when you do not know the objects of the scene.
 
 Thus, as a stepping stone we can perform the dynamic and static environment classification, this solves part of the problem, by classifying the environment in two categories. This will help to:
 
