updating chapter01, simplifying writing

--- a/chapter01.tex
+++ b/chapter01.tex
@@ -1,18 +1,22 @@
 \section{Driving support systems}
 
-In this document we are mainly concerned about driving assistance system. Such systems aims to support the driver in the action of driving, this support is given in any form: visual alerts, auditory perception, actuators or haptics\cite{riener2010sensor}.
+In this document we are mainly concerned about driving assistance systems. Such systems give support to the driver in the task of driving, this support can appear in several forms: visual alerts, auditory perception, actuators or haptics\cite{riener2010sensor}.
 
 Driving assistance has gained several branches, those branches have been subject of research throughout the years.
 
-Driving support systems are becoming more and more popular. There exist several reasons: the increase \textbf{risk of incidents} and/or providing more \textbf{comfort} for the drivert.
+Driving support systems are becoming more and more popular. There exist several reasons: the increase \textbf{risk of incidents} and/or providing more \textbf{comfort} for the driver are couple examples.
 
 The former is linked with the cognitive capacity of the human being. Although, cognition is not an absolute number it varies according to several parameters, like mental health, type of sensing mechanism (visual, auditory, tactile), amount of information transmitted, etc. 
 
-A research conducted 2008 studied the human cognitive limitation, only limitation for visual sensing mechanism was studied\cite{LautarutisV}. This researched state a limitation for the human been  basing this limitation in the saccadic movement of the eye and in the channel information capacity theorem. The latter is linked to the anatomy of the instruments and the means used by the driver to perform an activity.
+A research conducted in 2008, studied the human cognitive limitation for visual sensing mechanism \cite{LautarutisV}. This report establish the limit number of objects in which the human is capable of control simultaneously. 
 
-The human eye provides the largest amount of information for the brain. As the human visual sensors gives the major part of the world perception to the brain, it becomes per consequence the most used sensor.
+The latter is linked to the anatomy of the instruments and the mechanical action that must be performed by the driver to execute certain task.
 
-The action of driving did not change since its creation, but the environment has. Advanced Driver Assistence Systems (ADAS) was coined to characterize advanced techniques that enhances the capability of driving, improving the vehicle-handling performance and at the same time reduce the workload for the driver\cite{riener2010sensor}.
+The human eye provides a large amount of information for the brain. Thus, it gives a great amount of information about the world perception.
+
+The action of driving did not change since its creation but several mechanisms to support the driver have been included in the car. 
+
+Advanced Driver Assistence Systems (ADAS) was coined to characterize advanced techniques that enhances the capability of driving, improving the vehicle-handling performance and at the same time reduce the workload for the driver\cite{riener2010sensor}.
 
 The engineering of those types of systems is not related directly to computer science. The first mechanisms ever created for driving-support were purely mechanic, some examples of such systems are Cruise Control(CC), Anti-lock Break System (ABS), Collision Avoidance System(CAS).
 
