--- a/trunk/chapter01.tex
+++ b/trunk/chapter01.tex
@@ -1,26 +1,43 @@
 \section{Driving support systems}
 
-In this document we are mainly concerned about driving assistance systems. Such systems give support to the driver in the task of driving, this support can appear in several forms: visual alerts, auditory perception, actuators or haptics\cite{riener2010sensor}.
+In this document we are mainly concerned about driving assistance systems. Such systems facilitates the task of driving, this support can appear in several forms: 
 
-Driving assistance has gained several branches, those branches have been subject of research throughout the years.
+\begin{itemize}
+\item visual alerts
+\item auditory alerts
+\item tactile alerts (haptics\cite{riener2010sensor})
+\end{itemize}
 
-Driving support systems are becoming more and more popular. There exist several reasons: the increase \textbf{risk of incidents} and/or providing more \textbf{comfort} for the driver are couple examples.
+Driving support system may provide support in a less passive manner as well, for instance:
 
-The former is linked with the cognitive capacity of the human being. Although, cognition is not an absolute number it varies according to several parameters, like mental health, type of sensing mechanism (visual, auditory, tactile), amount of information transmitted, etc. 
+\begin{itemize}
+\item changing the car responds to the drivers commands
+\item changing the car behaviour
+\end{itemize}
 
-A research conducted in 2008, studied the human cognitive limitation for visual sensing mechanism \cite{LautarutisV}. This report establish the limit number of objects in which the human is capable of control simultaneously. 
+This field has gained several adepts, automobil industry and researchers have studied it throughout the years.
 
-The latter is linked to the anatomy of the instruments and the mechanical action that must be performed by the driver to execute certain task.
+Thus, driving support systems and its applications are becoming a popular tool. To exemplify such change, Brazil changed its law to turn mandatory the ABS(Anti-lock break systems) in all cars manufatured in the country.
 
-The human eye provides a large amount of information for the brain. Thus, it gives a great amount of information about the world perception.
+One of the reasons for such change is the increasing number of incidents involving vehicles. \textbf{Risk of incidents} is growing as the population of cars grows, and there is no signal in changing that numbers in next years, so driving support systems is coping with task of making the car a safer cage, among others tasks \ref{fig:sensor:target}.
 
-The action of driving did not change since its creation but several mechanisms to support the driver have been included in the car. 
+Those incidents may be related with the cognitive capacity limitation of the human being. 
 
-Advanced Driver Assistance Systems (ADAS) was coined to characterize advanced techniques that enhances the capability of driving, improving the vehicle-handling performance and at the same time reduce the workload for the driver\cite{riener2010sensor}.
+%Although, cognition is not an absolute number it varies according to several parameters, like mental health, type of sensing mechanism (visual, auditory, tactile), amount of information transmitted, etc. 
 
-The engineering of those types of systems is not related directly to computer science. The first mechanisms ever created for driving-support were purely mechanic, some examples of such systems are Cruise Control(CC), Anti-lock Break System (ABS), Collision Avoidance System(CAS).
+A research conducted in 2008 studied the human cognitive limitation for visual sensing mechanism \cite{LautarutisV}. This report established the limit number of objects in which the human is capable of track simultaneously. 
 
-\textbf{ADAS} is handled separately by researchers. Among the different fields of application (Figure \ref{fig:sensor:target}), this work will concentrate in application situated in \textbf{Safety} branch.
+The action of driving did not change since its creation but several mechanisms to support the driver have been included in the vehicle. All to provide a better experience and safety for the driver\cite{riener2010sensor}.
+
+A more modern approach of driving support system has appeared: Advanced Driver Assistance Systems (ADAS). 
+
+ADAS relies in computerized systems to process informations provided by the car (through sensors) to improve the user experience. 
+
+\textbf{ADAS} is splitted in different research branches, each of them with its own application and goals. Among those different branches (Figure \ref{fig:sensor:target}), this work will concentrate in applications situated in \textbf{Safety} branch. 
+
+The goal of this work is to tackle a very common issue in safety application (object classification) and \textbf{not} develop an application.
+
+This will be done by providing a theorerical framework to classificate the environment in a high level manner, separating static and dynamic objects a priori.
 
 \begin{figure}[h]
 \centering
